force-app/main/default/objects/NS_CaseSetting__mdt/NS_CaseSetting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration console for managing cases</description>
    <label>Case Setting</label>
    <pluralLabel>Case Settings</pluralLabel>
</CustomObject>