force-app/main/default/objects/NS_CaseSetting__mdt/fields/Focus_On__c.field-meta.xml
<CustomField>
    <fullName>Focus_On__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Focus Management of cases</description>
    <inlineHelpText>Check if you want the focus to shift to the Case Tab if Created with the corresponding Interaction Reason</inlineHelpText>
    <label>Focus On</label>
    <type>Checkbox</type>
</CustomField>