force-app/main/default/objects/NS_CaseSetting__mdt/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <label>Interaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>