force-app/main/default/objects/NS_CaseSetting__mdt/fields/NS_AutoEscalateOnUpdate__c.field-meta.xml
<CustomField>
    <fullName>NS_AutoEscalateOnUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Escalate the Case status and change owner to Manager&#39;s queue on Case Update</description>
    <label>OSS Escalate on Update</label>
    <type>Checkbox</type>
</CustomField>