force-app/main/default/objects/NS_CaseSetting__mdt/fields/NS_AutomotiveStatus__c.field-meta.xml
<CustomField>
    <fullName>NS_AutomotiveStatus__c</fullName>
    <description>Status on Case Creation for Automotive</description>
    <inlineHelpText>If NS_Escalated, then Task Owner Group is required for push notification</inlineHelpText>
    <label>Automotive On Create</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NS_Escalated</fullName>
                <default>true</default>
                <label>NS_Escalated</label>
            </value>
            <value>
                <fullName>NS_Closed</fullName>
            </value>
            <value>
                <fullName>NS_Working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>