force-app/main/default/objects/NS_CaseSetting__mdt/fields/NS_CreateTask__c.field-meta.xml
<CustomField>
    <fullName>NS_CreateTask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create a task record to send push/bell notification for the member of Task Owner Group and Case Owner Queue.</description>
    <label>OSS Notification</label>
    <type>Checkbox</type>
</CustomField>