force-app/main/default/objects/NS_CaseSetting__mdt/fields/NS_DefaultStatus__c.field-meta.xml
<CustomField>
    <fullName>NS_DefaultStatus__c</fullName>
    <description>Status Management</description>
    <inlineHelpText>Unless the user manually populates a Status value on the screen, the following Interaction Reason would create a Case record with status selected here.</inlineHelpText>
    <label>Default Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NS_New</fullName>
            </value>
            <value>
                <fullName>NS_Working</fullName>
                <default>true</default>
                <label>NS_Working</label>
            </value>
            <value>
                <fullName>NS_Escalated</fullName>
            </value>
            <value>
                <fullName>NS_AwaitingResponse</fullName>
            </value>
            <value>
                <fullName>NS_Closed</fullName>
            </value>
            <value>
                <fullName>NS_Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>