force-app/main/default/objects/NS_CaseSetting__mdt/fields/NS_EscalationReason__c.field-meta.xml
<CustomField>
    <fullName>NS_EscalationReason__c</fullName>
    <description>If Default status is Escalated provide Reason of escalation</description>
    <inlineHelpText>If Default status is Escalated provide Reason of escalation</inlineHelpText>
    <label>Escalation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>