force-app/main/default/objects/NS_CaseSetting__mdt/fields/NS_InteractionCategory__c.field-meta.xml
<CustomField>
    <fullName>NS_InteractionCategory__c</fullName>
    <description>Interaction category of Case</description>
    <label>Interaction Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>