force-app/main/default/objects/NS_CaseSetting__mdt/fields/NS_MktgNotification__c.field-meta.xml
<CustomField>
    <fullName>NS_MktgNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account Marketing Owner to receive notifications when cases associated to their accounts are escalated</description>
    <label>Mktg Notification</label>
    <type>Checkbox</type>
</CustomField>