force-app/main/default/objects/NS_CaseSetting__mdt/fields/NS_Priority__c.field-meta.xml
<CustomField>
    <fullName>NS_Priority__c</fullName>
    <description>Priority of Case</description>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <default>true</default>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>