force-app/main/default/objects/NS_CaseSetting__mdt/fields/NS_TaskOwnerGroup__c.field-meta.xml
<CustomField>
    <fullName>NS_TaskOwnerGroup__c</fullName>
    <description>Task owner is a group, please provide the Developer Name of Public Group</description>
    <inlineHelpText>Task owner is a group, please provide the Developer Name of Public Group</inlineHelpText>
    <label>Task Owner Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>