force-app/main/default/objects/NS_CaseSetting__mdt/listViews/NS_AllCaseSettings.listView-meta.xml
<ListView>
    <fullName>NS_AllCaseSettings</fullName>
    <columns>NS_InteractionCategory__c</columns>
    <columns>MasterLabel</columns>
    <columns>Interaction_Type__c</columns>
    <columns>Focus_On__c</columns>
    <columns>NS_Priority__c</columns>
    <columns>NS_MktgNotification__c</columns>
    <columns>NS_CreateTask__c</columns>
    <columns>NS_AutoEscalateOnUpdate__c</columns>
    <columns>NS_DefaultStatus__c</columns>
    <columns>NS_AutomotiveStatus__c</columns>
    <columns>NS_EPStatus__c</columns>
    <columns>NS_UTSStatus__c</columns>
    <columns>NS_TaskOwnerGroup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Case Settings</label>
</ListView>